--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,18 +1,11 @@
-// $mainColor: #3a6b34;
-$mainColor: #333;
-
-$textColor: #fff;
-// $mainColor: #2a5ea5;
-
 footer {
-  // box-shadow: 5px -5px 5px #c0c0c0;
-  background: transparent;
-  padding: 20px;
-  grid-area: footer;
-  // background-color: $mainColor;
-  color: $mainColor;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
+	padding: 20px;
+	grid-area: footer;
+	background-color: var(--mainColor);
+	// border-top: 1px solid var(--mainColor);
+	color: var(--textColor);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
 }
