--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -1,135 +1,270 @@
-$textColor: #fff;
-$mainColor: #333;
-
 .cart {
-  .container {
-    @media (min-width: 992px) {
-      width: 70%;
-    }
-    .cart-title {
-      border-bottom: 1px solid $mainColor;
-      padding: 10px;
-      svg {
-        color: orangered;
-      }
-    }
-    .cart-items {
-      margin-top: 10px;
-      .cart-item {
-        box-shadow: 2px 2px 5px #c0c0c0, -2px -2px 5px #c0c0c0;
-        display: flex;
-        padding: 10px;
-        margin-bottom: 10px;
-        img {
-          border-radius: 5px;
-          width: 100px;
-          margin-right: 10px;
-          border: 1px solid $mainColor;
-          cursor: pointer;
-        }
-        .cart-info {
-          flex: 1;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          p {
-            margin-bottom: 5px;
-            span {
-              font-weight: bold;
-            }
-          }
-        }
-      }
-    }
-    .cart-footer {
-      display: flex;
-      justify-content: space-between;
-      margin: 20px;
-      .total {
-        font-size: 25px;
-      }
-    }
-    button {
-      background-color: transparent;
-      border: 1px solid #c0c0c0;
-      padding: 5px;
-      color: orangered;
-      font-size: 20px;
-      margin-right: 10px;
-      box-shadow: 2px 2px 5px #c0c0c0;
-      cursor: pointer;
-      &:active {
-        transform: scale(0.9);
-      }
-      &.select-products {
-        background-color: $mainColor;
-        color: white;
-        border: none;
-      }
-    }
-  }
+	margin: 20px 0;
+	.cart-title {
+		border-top: 2px solid var(--mainColor);
+		color: var(--mainColor);
+		text-transform: uppercase;
+		padding: 10px 0;
+		span {
+			padding: 10px;
+			background: var(--mainColor);
+			color: var(--textColor);
+		}
+	}
+
+	.heading {
+		display: flex;
+		justify-content: space-between;
+		padding: 10px;
+		background-color: var(--mainColor);
+		color: #fff;
+		// margin-top: 1px;
+		> div {
+			width: 150px;
+			text-align: center;
+		}
+	}
+
+	.cart-items {
+		// border: 1px solid #c0c0c0;
+		.cart-item {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding: 10px 0;
+			border-bottom: 1px solid #c0c0c0;
+			.image {
+				display: flex;
+				flex-direction: column;
+				gap: 10px;
+				align-items: center;
+				color: var(--mainColor);
+				text-transform: capitalize;
+				width: 150px;
+				img {
+					width: 70px;
+					height: 70px;
+					object-fit: contain;
+					cursor: pointer;
+				}
+			}
+
+			.price,
+			.quantity,
+			.remove {
+				text-align: center;
+				width: 150px;
+
+				svg {
+					color: var(--mainColor);
+					font-size: 23px;
+					cursor: pointer;
+					transition: all 0.3s;
+					&:hover {
+						color: red;
+					}
+				}
+				.quantity-options {
+					background-color: #fff;
+					display: flex;
+					justify-content: space-between;
+					text-align: center;
+					border-radius: 20px;
+					margin: auto;
+					width: 75px;
+					> span {
+						width: 20px;
+						height: 20px;
+						border-radius: 50%;
+						background-color: var(--mainColor);
+						text-align: center;
+						color: var(--textColor);
+						cursor: pointer;
+						&.hide {
+							visibility: hidden;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.cart-footer {
+		border-bottom: 2px solid var(--mainColor);
+		display: flex;
+		justify-content: space-between;
+		align-items: stretch;
+		.total,
+		.checkout-order {
+			border: none;
+			padding: 15px;
+			width: 150px;
+			font-weight: bold;
+			font-size: 18px;
+			letter-spacing: 1px;
+		}
+		.total {
+			border-right: 1px solid #c0c0c0;
+			border-left: 1px solid #c0c0c0;
+			width: 200px;
+			color: var(--mainColor);
+		}
+		.checkout-order {
+			background-color: var(--mainColor);
+			color: var(--textColor);
+		}
+	}
+}
+
+@media (max-width: 767px) {
+	.cart {
+		.heading {
+			> div {
+				width: 80px;
+			}
+		}
+		.cart-items {
+			.cart-item {
+				.image {
+					width: 80px;
+					img {
+						width: 50px;
+						height: 50px;
+					}
+				}
+				.price,
+				.quantity,
+				.remove {
+					width: 80px;
+				}
+			}
+		}
+	}
+}
+
+.checkout-modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 400px;
+	background-color: var(--bodyColor);
+	padding: 20px;
+	border-radius: 4px;
+	overflow: auto;
+	transition: all 0.4s ease-in-out;
+	opacity: 0;
+	.accept-order {
+		h2 {
+			margin-bottom: 20px;
+		}
+		form {
+			display: flex;
+			justify-content: space-between;
+			gap: 20px;
+			button {
+				padding: 10px 20px;
+				border: none;
+				background-color: var(--mainColor);
+				color: var(--textColor);
+				border-radius: 5px;
+				&:hover {
+					filter: brightness(1.2);
+				}
+			}
+		}
+	}
+}
+
+.checkout-modal-overlay,
+.cart-modal-overlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(61, 61, 61, 0.7);
+	z-index: 9999;
+	transition: all 0.5s ease-in-out;
+}
+
+.ReactModal__Content--after-open {
+	opacity: 1;
+}
+
+.ReactModal__Content--before-close {
+	opacity: 0;
 }
 
 .cart-modal {
-  position: relative;
-  background-color: rgb(255, 255, 255);
-  width: 80%;
-  border: 2px solid $mainColor;
-  margin: 20px auto;
-  padding: 50px;
-  .close-icon {
-    display: block;
-    float: right;
-    border: 1px solid #c0c0c0;
-    padding: 7px 10px;
-    cursor: pointer;
-    font-size: 20px;
-    &:hover {
-      span {
-        transition: all 0.3s;
-        display: block;
-        transform: scale(2);
-        color: red;
-      }
-    }
-  }
-  .order-content {
-    margin-right: 50px;
-    .alert-success {
-      box-shadow: 2px 2px 5px #c0c0c0;
-      text-align: center;
-      background-color: green;
-      color: #fff;
-      margin-bottom: 20px;
-      padding: 10px;
-      font-size: 20px;
-    }
-    .order-info {
-      box-shadow: 2px 2px 5px #c0c0c0;
-      table {
-        border: 1px solid #c0c0c0;
-        width: 100%;
-        tr {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          border-bottom: 1px solid #c0c0c0;
-          &:last-child {
-            border-bottom: none;
-          }
-          td {
-            padding: 10px;
-            &.products-info {
-              p {
-                border: 1px solid #c0c0c0;
-                margin-bottom: 4px;
-                box-shadow: 2px 2px 2px #c0c0c0;
-                padding: 5px;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 600px;
+	height: 400px;
+	background-color: var(--bodyColor);
+	padding: 20px;
+	border-radius: 4px;
+	overflow: auto;
+	transition: all 0.4s ease-in-out;
+	opacity: 0;
+	@media (max-width: 768px) {
+		flex-direction: column-reverse;
+		width: 85%;
+	}
+
+	.close-icon {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		border: 1px solid #c0c0c0;
+		border-radius: 4px;
+		padding: 0 10px;
+		color: var(--mainColor);
+		font-size: 17px;
+		font-weight: bold;
+		cursor: pointer;
+	}
+
+	.order-content {
+		width: 90%;
+		.alert-success {
+			text-align: center;
+			background-color: green;
+			color: #fff;
+			margin-bottom: 20px;
+			padding: 10px;
+			font-size: 20px;
+		}
+		.order-info {
+			table {
+				border: 1px solid #c0c0c0;
+				width: 100%;
+				tr {
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+					border-bottom: 1px solid #c0c0c0;
+					@media (max-width: 768px) {
+						flex-direction: column;
+					}
+					&:last-child {
+						border-bottom: none;
+					}
+					td {
+						padding: 10px;
+						&.products-info {
+							p {
+								border: 1px solid #c0c0c0;
+								margin-bottom: 4px;
+								box-shadow: 2px 2px 2px #c0c0c0;
+								padding: 5px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
