--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,134 +1,257 @@
-$mainColor: #333;
-$textColor: #333;
-
 header {
 	grid-area: header;
-	color: $mainColor;
+	color: var(--mainColor);
+	background-color: var(--mainColor);
+	// position: relative;
+	// width: 100%;
+
 	.container {
 		display: flex;
 		justify-content: space-between;
-		align-items: center;
+		align-items: stretch;
 		height: 100%;
-		> a {
-			text-transform: uppercase;
-			color: $mainColor;
+		.logo {
+			text-transform: none;
+			color: var(--textColor);
 			text-decoration: none;
-			h1 {
-				font-family: 'operator mono';
-				display: flex;
-				align-items: center;
-				gap: 10px;
-				svg {
-					color: orangered;
+			display: flex;
+			align-items: center;
+			font-size: 20px;
+			&:hover {
+				span {
+					filter: brightness(1.2);
 				}
+			}
+			span {
+				color: var(--secondColor);
+				display: flex;
+				height: 100%;
+				align-items: center;
+				font-size: 50px;
 			}
 		}
 		nav {
-			//! main ul
-			ul.main-list {
-				display: flex;
-				align-items: center;
-				position: relative;
+			display: flex;
+			align-items: stretch;
+			// TODO: main ul
+			.main-list {
 				list-style: none;
-				//! all list
+				display: flex;
+				align-items: stretch;
+				gap: 5px;
 				> li {
+					display: flex;
+					align-items: stretch;
+					transition: all 0.3s;
 					position: relative;
-					margin-left: 10px;
-					cursor: pointer;
-					.active {
-						position: relative;
-						color: $mainColor;
-						border: 1px solid orangered;
-					}
-					a {
-						font-weight: bold;
-						display: block;
+					> a {
+						display: flex;
+						align-items: center;
+						gap: 5px;
+						color: var(--textColor);
 						text-decoration: none;
-						font-size: 18px;
-						color: #333;
-						cursor: pointer;
-						padding: 15px;
-						&.logout,
-						&.signup {
-							background-color: orangered;
-							border-radius: 25px;
-							color: #fafafa;
-							opacity: 0.8;
-							transition: 0.3s;
-							&:hover {
-								opacity: 1;
-							}
-						}
-					}
-					&:not(:last-child)::after {
-						content: '';
-						position: absolute;
-						width: 0%;
-						height: 2px;
-						background-color: orangered;
-						bottom: -5px;
-						left: 0;
-						transition: 0.3s;
-					}
-					&:hover {
-						&::after {
-							width: 100%;
-							opacity: 0.7;
-						}
-					}
-				}
-				//! drop down
-				li.drop-menu {
-					> div {
-						font-weight: bold;
-						display: block;
-						font-size: 18px;
-						color: #fff;
-						cursor: pointer;
-						transition: 0.3s;
-						&:hover {
-							transform: scale(1.1);
-						}
-						img.profile-img {
-							width: 50px;
-							height: 50px;
-							border-radius: 50%;
-							object-fit: contain;
-						}
-					}
-					> ul.drop-list {
-						width: 300px;
-						position: absolute;
-						top: 53px;
-						right: 0;
-						list-style-type: none;
-						background-color: #fff;
-						box-shadow: 2px 2px 5px #c0c0c0;
-						border-radius: 6px;
+						padding: 10px;
+						position: relative;
 						z-index: 1;
+						transition: 0.3s;
+						svg {
+							font-size: 17px;
+						}
 						&::after {
 							content: '';
 							position: absolute;
+							width: 100%;
+							height: 0;
+							left: 0;
+							bottom: 0;
+							background-color: var(--bodyColor);
+							z-index: -1;
+							transition: 0.4s;
 						}
-						> li {
-							// padding: 10px;
-							display: flex;
-							flex-wrap: wrap;
-							align-items: center;
-							transition: 0.3s;
-							&:not(:last-child) {
-								border-bottom: 1px solid #c0c0c0;
+						&:hover,
+						&.active {
+							color: var(--mainColor);
+							&::after {
+								height: 100%;
 							}
-							&:hover {
-								margin-left: 10px;
+							svg {
+								color: var(--secondColor);
 							}
 						}
+					}
+					&.drop-menu {
+						// position: relative;
+						img {
+							width: 60px;
+							cursor: pointer;
+							object-fit: cover;
+						}
+						.menu-content {
+							padding: 10px;
+							transition: all 0.5s;
+							background-color: var(--mainColor);
+							position: absolute;
+							right: -350px;
+							top: calc(60px + 15px);
+							width: 260px;
+							z-index: 11;
+							opacity: 0.97;
+							&.move {
+								right: 0;
+							}
+							&::before {
+								content: '';
+								position: absolute;
+								border: 15px solid;
+								border-color: transparent transparent var(--mainColor) transparent;
+								top: -30px;
+								right: 15px;
+							}
+							> a {
+								display: flex;
+								align-items: center;
+								gap: 15px;
+								color: var(--textColor);
+								text-decoration: none;
+								padding: 10px;
+								z-index: 1;
+								transition: 0.5s;
+								&:not(:last-child) {
+									border-bottom: 1px solid var(--textColor);
+								}
+								svg {
+									font-size: 25px;
+									transition: all 0.5s;
+								}
+								&:hover {
+									background-color: #4a4a4a;
+									svg {
+										color: var(--secondColor);
+										transform: scale(1.1);
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+
+			// TODO: reponsive ul
+			.main-responsive-list {
+				opacity: 0.97;
+				z-index: 11;
+				position: absolute;
+				top: 0;
+				right: -300px;
+				transition: all 0.5s;
+				display: none;
+
+				&.move {
+					right: 0;
+				}
+
+				.responsive-list {
+					background-color: var(--mainColor);
+					width: 300px;
+					min-width: 300px;
+					position: absolute;
+					top: 60px;
+					right: 0;
+					transition: all 0.5s;
+					display: flex;
+					flex-direction: column;
+					color: var(--textColor);
+
+					.toggle-bar {
+						padding: 10px;
+						width: fit-content;
+						position: absolute;
+						left: -40px;
+						top: 0;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						transition: all 0.3s;
+						cursor: pointer;
+						background: var(--mainColor);
+						svg {
+							fill: var(--secondColor);
+							font-size: 20px;
+							transition: all 0.3s;
+						}
+					}
+
+					> div {
+						padding: 15px 10px;
+						transition: 0.3s;
+						display: flex;
 						a {
-							display: block;
-							color: #333;
+							display: flex;
+							align-items: center;
+							gap: 10px;
+							color: var(--textColor);
+							text-decoration: none;
+						}
+						svg {
+							font-size: 30px;
 							cursor: pointer;
 						}
 					}
+					.profile-ul {
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+						a {
+							img {
+								width: 50px;
+								height: 50px;
+								border-radius: 50%;
+								object-fit: cover;
+							}
+						}
+						svg {
+							transform: rotate(180deg);
+							&:hover {
+								color: var(--secondColor);
+								filter: brightness(1.5);
+							}
+						}
+					}
+
+					.basic-ul {
+						border-top: 1px solid #c0c0c0;
+						flex-direction: column;
+						gap: 10px;
+						a {
+							display: flex;
+							justify-content: space-between;
+							padding: 5px;
+							padding-right: 10px;
+							gap: 20px;
+							font-size: 18px;
+							font-weight: bold;
+							transition: all 0.3s;
+							&:hover {
+								background-color: #4a4a4a;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 767px) {
+	header {
+		.container {
+			justify-content: center;
+			nav {
+				.main-list {
+					display: none;
+				}
+				.main-responsive-list {
+					display: block;
 				}
 			}
 		}
