--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -1,114 +1,207 @@
 // $mainColor: #3a6b34;
 $mainColor: #333;
-
 $textColor: #fff;
-// $mainColor: #2a5ea5;
 
 .products-wrapper {
-  // height: fit-content;
-  height: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
+	margin-top: 20px;
+	// height: fit-content;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	gap: 20px;
+	transition: all 0.5s;
 
-  .product-item {
-    box-shadow: 2px 5px 5px #c0c0c0;
-    border-radius: 5px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
-    @media (max-width: 767px) {
-      width: 100%;
-    }
+	.product-item {
+		box-shadow: 2px 2px 10px #c0c0c0;
+		text-align: center;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		overflow: hidden;
 
-    img {
-      max-width: 100%;
-      cursor: pointer;
-    }
+		img {
+			width: 200px;
+			max-width: 100%;
+			margin: auto;
+			cursor: pointer;
+		}
 
-    .product-desc {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      border-top: 1px solid $mainColor;
+		.product-desc {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			padding: 10px;
+			border-top: 1px solid var(--secondColor);
 
-      p {
-        text-transform: uppercase;
-      }
-    }
+			p {
+				text-transform: uppercase;
+			}
+		}
 
-    button {
-      border: none;
-      font-size: 17px;
-      background: $mainColor;
-      color: $textColor;
-      width: 100%;
-      padding: 10px;
-      height: 40px;
-      text-align: left;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      cursor: pointer;
-      &:active {
-        font-size: 16.7px;
-      }
-    }
-  }
+		button {
+			border: none;
+			font-size: 17px;
+			background: var(--mainColor);
+			color: var(--textColor);
+			width: 100%;
+			padding: 10px;
+			height: 40px;
+			text-align: left;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			cursor: pointer;
+			&:active {
+				font-size: 16.7px;
+			}
+		}
+	}
 }
 
-.products-modal {
-  position: relative;
-  background-color: rgb(255, 255, 255);
-  width: 80%;
-  border: 2px solid $mainColor;
-  margin: 20px auto;
-  padding: 20px;
-  @media (max-width: 991px) {
-    width: 99%;
-  }
+@media (max-width: 767px) {
+	.products-wrapper {
+		margin-top: 50px;
+		.product-item {
+			width: 100%;
+		}
+	}
+}
 
-  .close-icon {
-    display: block;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    transition: all 0.1s;
-    cursor: pointer;
-    font-size: 20px;
-    &:hover {
-      transform: scale(2);
-      color: red;
-    }
-  }
+.product-modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	// width: 70%;
+	// height: 70%;
+	max-width: 90%;
+	max-height: 90%;
+	background-color: var(--bodyColor);
+	padding: 20px;
+	border-radius: 4px;
+	overflow: auto;
+	transition: all 0.4s ease-in-out;
+	opacity: 0;
+	&:focus {
+		outline: none;
+	}
+	.close-icon {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		border: 1px solid #c0c0c0;
+		border-radius: 4px;
+		padding: 0 10px;
+		color: var(--mainColor);
+		font-size: 17px;
+		font-weight: bold;
+		cursor: pointer;
+	}
+	.main-content {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		gap: 20px;
 
-  .product-info {
-    position: relative;
-    display: flex;
-    align-items: center;
-    @media (max-width: 767px) {
-      flex-direction: column-reverse;
-    }
+		.product-info {
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			gap: 20px;
 
-    img {
-      margin-right: 30px;
-      width: 300px;
-      max-width: 100%;
-    }
+			img {
+				width: 200px;
+				height: 200px;
+				max-width: 100%;
+				border-radius: 50%;
+				object-fit: contain;
+			}
+			.product-info-details {
+				flex: 1;
+				.title {
+					width: fit-content;
+					margin: 0 auto 10px;
+					border-bottom: 1px solid #c0c0c0;
+					padding: 0 10px 10px;
+				}
+				.desc,
+				.price,
+				.category {
+					margin: 5px auto;
+					> div {
+						border: 1px solid var(--secondColor);
+						padding: 3px 10px;
+						margin-top: 5px;
+					}
+				}
+			}
+		}
+		.modal-options {
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			gap: 10px;
+			button {
+				width: 180px;
+				border: none;
+				padding: 10px;
+				font-size: 17px;
+				color: var(--textColor);
+				border-radius: 4px;
+				transition: all 0.3s;
+				&:hover {
+					filter: brightness(1.2);
+				}
+			}
+			.close {
+				background-color: var(--mainColor);
+			}
+			.delete {
+				background-color: rgb(255, 39, 39);
+			}
+			.add {
+				background-color: rgb(63, 63, 228);
+			}
+		}
+	}
+}
 
-    > div div:first-child {
-      text-align: center;
-      margin-bottom: 50px;
-      color: $mainColor;
-      font-size: 30px;
-    }
+@media (max-width: 767px) {
+	.product-modal {
+		width: 80%;
+		.main-content {
+			justify-content: center;
+			gap: 10px;
+			.product-info {
+				flex-direction: column;
+				img {
+					width: 100px;
+					height: 100px;
+				}
+			}
+			.modal-options {
+				flex-direction: column;
+				justify-content: center;
+				gap: 5px;
+			}
+		}
+	}
+}
 
-    p {
-      font-size: 20px;
-      margin: 10px 0;
-    }
-  }
+.product-modal-overlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(61, 61, 61, 0.7);
+	z-index: 9999;
+	// transition: all 0.5s ease-in-out;
+}
+
+.ReactModal__Content--after-open {
+	opacity: 1;
+}
+
+.ReactModal__Content--before-close {
+	opacity: 0;
 }
