--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -1,122 +1,236 @@
 header {
   grid-area: header;
-  color: #333;
+  color: var(--mainColor);
+  background-color: var(--mainColor);
 }
 header .container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   height: 100%;
 }
-header .container > a {
-  text-transform: uppercase;
-  color: #333;
+header .container .logo {
+  text-transform: none;
+  color: var(--textColor);
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
 }
-header .container > a h1 {
-  font-family: "operator mono";
+header .container .logo:hover span {
+  filter: brightness(1.2);
+}
+header .container .logo span {
+  color: var(--secondColor);
+  display: flex;
+  height: 100%;
+  align-items: center;
+  font-size: 50px;
+}
+header .container nav {
+  display: flex;
+  align-items: stretch;
+}
+header .container nav .main-list {
+  list-style: none;
+  display: flex;
+  align-items: stretch;
+  gap: 5px;
+}
+header .container nav .main-list > li {
+  display: flex;
+  align-items: stretch;
+  transition: all 0.3s;
+  position: relative;
+}
+header .container nav .main-list > li > a {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: var(--textColor);
+  text-decoration: none;
+  padding: 10px;
+  position: relative;
+  z-index: 1;
+  transition: 0.3s;
+}
+header .container nav .main-list > li > a svg {
+  font-size: 17px;
+}
+header .container nav .main-list > li > a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0;
+  left: 0;
+  bottom: 0;
+  background-color: var(--bodyColor);
+  z-index: -1;
+  transition: 0.4s;
+}
+header .container nav .main-list > li > a:hover, header .container nav .main-list > li > a.active {
+  color: var(--mainColor);
+}
+header .container nav .main-list > li > a:hover::after, header .container nav .main-list > li > a.active::after {
+  height: 100%;
+}
+header .container nav .main-list > li > a:hover svg, header .container nav .main-list > li > a.active svg {
+  color: var(--secondColor);
+}
+header .container nav .main-list > li.drop-menu img {
+  width: 60px;
+  cursor: pointer;
+  object-fit: cover;
+}
+header .container nav .main-list > li.drop-menu .menu-content {
+  padding: 10px;
+  transition: all 0.5s;
+  background-color: var(--mainColor);
+  position: absolute;
+  right: -350px;
+  top: 75px;
+  width: 260px;
+  z-index: 11;
+  opacity: 0.97;
+}
+header .container nav .main-list > li.drop-menu .menu-content.move {
+  right: 0;
+}
+header .container nav .main-list > li.drop-menu .menu-content::before {
+  content: "";
+  position: absolute;
+  border: 15px solid;
+  border-color: transparent transparent var(--mainColor) transparent;
+  top: -30px;
+  right: 15px;
+}
+header .container nav .main-list > li.drop-menu .menu-content > a {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  color: var(--textColor);
+  text-decoration: none;
+  padding: 10px;
+  z-index: 1;
+  transition: 0.5s;
+}
+header .container nav .main-list > li.drop-menu .menu-content > a:not(:last-child) {
+  border-bottom: 1px solid var(--textColor);
+}
+header .container nav .main-list > li.drop-menu .menu-content > a svg {
+  font-size: 25px;
+  transition: all 0.5s;
+}
+header .container nav .main-list > li.drop-menu .menu-content > a:hover {
+  background-color: #4a4a4a;
+}
+header .container nav .main-list > li.drop-menu .menu-content > a:hover svg {
+  color: var(--secondColor);
+  transform: scale(1.1);
+}
+header .container nav .main-responsive-list {
+  opacity: 0.97;
+  z-index: 11;
+  position: absolute;
+  top: 0;
+  right: -300px;
+  transition: all 0.5s;
+  display: none;
+}
+header .container nav .main-responsive-list.move {
+  right: 0;
+}
+header .container nav .main-responsive-list .responsive-list {
+  background-color: var(--mainColor);
+  width: 300px;
+  min-width: 300px;
+  position: absolute;
+  top: 60px;
+  right: 0;
+  transition: all 0.5s;
+  display: flex;
+  flex-direction: column;
+  color: var(--textColor);
+}
+header .container nav .main-responsive-list .responsive-list .toggle-bar {
+  padding: 10px;
+  width: fit-content;
+  position: absolute;
+  left: -40px;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s;
+  cursor: pointer;
+  background: var(--mainColor);
+}
+header .container nav .main-responsive-list .responsive-list .toggle-bar svg {
+  fill: var(--secondColor);
+  font-size: 20px;
+  transition: all 0.3s;
+}
+header .container nav .main-responsive-list .responsive-list > div {
+  padding: 15px 10px;
+  transition: 0.3s;
+  display: flex;
+}
+header .container nav .main-responsive-list .responsive-list > div a {
   display: flex;
   align-items: center;
   gap: 10px;
-}
-header .container > a h1 svg {
-  color: orangered;
-}
-header .container nav ul.main-list {
-  display: flex;
-  align-items: center;
-  position: relative;
-  list-style: none;
-}
-header .container nav ul.main-list > li {
-  position: relative;
-  margin-left: 10px;
-  cursor: pointer;
-}
-header .container nav ul.main-list > li .active {
-  position: relative;
-  color: #333;
-  border: 1px solid orangered;
-}
-header .container nav ul.main-list > li a {
-  font-weight: bold;
-  display: block;
+  color: var(--textColor);
   text-decoration: none;
-  font-size: 18px;
-  color: #333;
+}
+header .container nav .main-responsive-list .responsive-list > div svg {
+  font-size: 30px;
   cursor: pointer;
-  padding: 15px;
 }
-header .container nav ul.main-list > li a.logout, header .container nav ul.main-list > li a.signup {
-  background-color: orangered;
-  border-radius: 25px;
-  color: #fafafa;
-  opacity: 0.8;
-  transition: 0.3s;
+header .container nav .main-responsive-list .responsive-list .profile-ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-header .container nav ul.main-list > li a.logout:hover, header .container nav ul.main-list > li a.signup:hover {
-  opacity: 1;
-}
-header .container nav ul.main-list > li:not(:last-child)::after {
-  content: "";
-  position: absolute;
-  width: 0%;
-  height: 2px;
-  background-color: orangered;
-  bottom: -5px;
-  left: 0;
-  transition: 0.3s;
-}
-header .container nav ul.main-list > li:hover::after {
-  width: 100%;
-  opacity: 0.7;
-}
-header .container nav ul.main-list li.drop-menu > div {
-  font-weight: bold;
-  display: block;
-  font-size: 18px;
-  color: #fff;
-  cursor: pointer;
-  transition: 0.3s;
-}
-header .container nav ul.main-list li.drop-menu > div:hover {
-  transform: scale(1.1);
-}
-header .container nav ul.main-list li.drop-menu > div img.profile-img {
+header .container nav .main-responsive-list .responsive-list .profile-ul a img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  object-fit: contain;
+  object-fit: cover;
 }
-header .container nav ul.main-list li.drop-menu > ul.drop-list {
-  width: 300px;
-  position: absolute;
-  top: 53px;
-  right: 0;
-  list-style-type: none;
-  background-color: #fff;
-  box-shadow: 2px 2px 5px #c0c0c0;
-  border-radius: 6px;
-  z-index: 1;
+header .container nav .main-responsive-list .responsive-list .profile-ul svg {
+  transform: rotate(180deg);
 }
-header .container nav ul.main-list li.drop-menu > ul.drop-list::after {
-  content: "";
-  position: absolute;
+header .container nav .main-responsive-list .responsive-list .profile-ul svg:hover {
+  color: var(--secondColor);
+  filter: brightness(1.5);
 }
-header .container nav ul.main-list li.drop-menu > ul.drop-list > li {
+header .container nav .main-responsive-list .responsive-list .basic-ul {
+  border-top: 1px solid #c0c0c0;
+  flex-direction: column;
+  gap: 10px;
+}
+header .container nav .main-responsive-list .responsive-list .basic-ul a {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  transition: 0.3s;
+  justify-content: space-between;
+  padding: 5px;
+  padding-right: 10px;
+  gap: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  transition: all 0.3s;
 }
-header .container nav ul.main-list li.drop-menu > ul.drop-list > li:not(:last-child) {
-  border-bottom: 1px solid #c0c0c0;
+header .container nav .main-responsive-list .responsive-list .basic-ul a:hover {
+  background-color: #4a4a4a;
 }
-header .container nav ul.main-list li.drop-menu > ul.drop-list > li:hover {
-  margin-left: 10px;
-}
-header .container nav ul.main-list li.drop-menu > ul.drop-list a {
-  display: block;
-  color: #333;
-  cursor: pointer;
+
+@media (max-width: 767px) {
+  header .container {
+    justify-content: center;
+  }
+  header .container nav .main-list {
+    display: none;
+  }
+  header .container nav .main-responsive-list {
+    display: block;
+  }
 }
