--- a/client/src/css/Login/Login.css
+++ b/client/src/css/Login/Login.css
@@ -13,7 +13,7 @@
   padding: 20px;
 }
 .login form.login-content h1 {
-  background-color: #333;
+  background-color: var(--mainColor);
   color: #fff;
   width: 50px;
   height: 50px;
@@ -25,18 +25,19 @@
 }
 .login form.login-content .go-sign-up {
   display: block;
-  color: #333;
+  color: var(--mainColor);
   margin-bottom: 20px;
 }
 .login form.login-content .login-box {
-  border: 1px solid #c0c0c0;
   border-radius: 5px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 .login form.login-content .login-box .input-feild {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
   border: 1px solid #afafaf;
   border-radius: 5px;
   box-shadow: 2px 2px 5px #c0c0c0;
@@ -50,7 +51,7 @@
   border: none;
   background-color: transparent;
   color: #000;
-  caret-color: #333;
+  caret-color: var(--mainColor);
   font-size: 16px;
   transition: 0.3s;
   border-left: 1px solid #afafaf;
@@ -73,7 +74,7 @@
   padding: 10px;
 }
 .login form.login-content .login-box .input-feild span.icon svg {
-  color: #333;
+  color: var(--mainColor);
 }
 .login form.login-content .login-box .input-feild span.eye {
   padding: 10px;
@@ -85,7 +86,7 @@
 .login form.login-content .login-box button {
   display: block;
   margin: auto;
-  background: #333;
+  background: var(--mainColor);
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -127,12 +128,12 @@
 }
 .login form.login-content .login-box .check-forget a {
   display: block;
-  color: #333;
+  color: var(--mainColor);
   font-size: 15px;
 }
 .login form.login-content .login-box .or-option {
   border-radius: 50%;
-  background-color: #333;
+  background-color: var(--mainColor);
   color: #fff;
   width: 30px;
   height: 30px;
@@ -149,7 +150,7 @@
   width: 120px;
   height: 1px;
   right: -120px;
-  background-color: #333;
+  background-color: var(--mainColor);
 }
 .login form.login-content .login-box .or-option::after {
   content: "";
@@ -157,7 +158,7 @@
   width: 120px;
   height: 1px;
   left: -120px;
-  background-color: #333;
+  background-color: var(--mainColor);
 }
 .login form.login-content .login-box ul {
   list-style: none;
