--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -1,25 +1,22 @@
 .products-wrapper {
-  height: 100%;
+  margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
+  transition: all 0.5s;
 }
 .products-wrapper .product-item {
-  box-shadow: 2px 5px 5px #c0c0c0;
-  border-radius: 5px;
+  box-shadow: 2px 2px 10px #c0c0c0;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
 }
-@media (max-width: 767px) {
-  .products-wrapper .product-item {
-    width: 100%;
-  }
-}
 .products-wrapper .product-item img {
+  width: 200px;
   max-width: 100%;
+  margin: auto;
   cursor: pointer;
 }
 .products-wrapper .product-item .product-desc {
@@ -27,7 +24,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  border-top: 1px solid #333;
+  border-top: 1px solid var(--secondColor);
 }
 .products-wrapper .product-item .product-desc p {
   text-transform: uppercase;
@@ -35,8 +32,8 @@
 .products-wrapper .product-item button {
   border: none;
   font-size: 17px;
-  background: #333;
-  color: #fff;
+  background: var(--mainColor);
+  color: var(--textColor);
   width: 100%;
   padding: 10px;
   height: 40px;
@@ -50,54 +47,146 @@
   font-size: 16.7px;
 }
 
-.products-modal {
-  position: relative;
-  background-color: white;
-  width: 80%;
-  border: 2px solid #333;
-  margin: 20px auto;
-  padding: 20px;
-}
-@media (max-width: 991px) {
-  .products-modal {
-    width: 99%;
-  }
-}
-.products-modal .close-icon {
-  display: block;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  transition: all 0.1s;
-  cursor: pointer;
-  font-size: 20px;
-}
-.products-modal .close-icon:hover {
-  transform: scale(2);
-  color: red;
-}
-.products-modal .product-info {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
 @media (max-width: 767px) {
-  .products-modal .product-info {
-    flex-direction: column-reverse;
+  .products-wrapper {
+    margin-top: 50px;
+  }
+  .products-wrapper .product-item {
+    width: 100%;
   }
 }
-.products-modal .product-info img {
-  margin-right: 30px;
-  width: 300px;
+.product-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 90%;
+  max-height: 90%;
+  background-color: var(--bodyColor);
+  padding: 20px;
+  border-radius: 4px;
+  overflow: auto;
+  transition: all 0.4s ease-in-out;
+  opacity: 0;
+}
+.product-modal:focus {
+  outline: none;
+}
+.product-modal .close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: 1px solid #c0c0c0;
+  border-radius: 4px;
+  padding: 0 10px;
+  color: var(--mainColor);
+  font-size: 17px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.product-modal .main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+.product-modal .main-content .product-info {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 20px;
+}
+.product-modal .main-content .product-info img {
+  width: 200px;
+  height: 200px;
   max-width: 100%;
+  border-radius: 50%;
+  object-fit: contain;
 }
-.products-modal .product-info > div div:first-child {
-  text-align: center;
-  margin-bottom: 50px;
-  color: #333;
-  font-size: 30px;
+.product-modal .main-content .product-info .product-info-details {
+  flex: 1;
 }
-.products-modal .product-info p {
-  font-size: 20px;
-  margin: 10px 0;
+.product-modal .main-content .product-info .product-info-details .title {
+  width: fit-content;
+  margin: 0 auto 10px;
+  border-bottom: 1px solid #c0c0c0;
+  padding: 0 10px 10px;
+}
+.product-modal .main-content .product-info .product-info-details .desc,
+.product-modal .main-content .product-info .product-info-details .price,
+.product-modal .main-content .product-info .product-info-details .category {
+  margin: 5px auto;
+}
+.product-modal .main-content .product-info .product-info-details .desc > div,
+.product-modal .main-content .product-info .product-info-details .price > div,
+.product-modal .main-content .product-info .product-info-details .category > div {
+  border: 1px solid var(--secondColor);
+  padding: 3px 10px;
+  margin-top: 5px;
+}
+.product-modal .main-content .modal-options {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 10px;
+}
+.product-modal .main-content .modal-options button {
+  width: 180px;
+  border: none;
+  padding: 10px;
+  font-size: 17px;
+  color: var(--textColor);
+  border-radius: 4px;
+  transition: all 0.3s;
+}
+.product-modal .main-content .modal-options button:hover {
+  filter: brightness(1.2);
+}
+.product-modal .main-content .modal-options .close {
+  background-color: var(--mainColor);
+}
+.product-modal .main-content .modal-options .delete {
+  background-color: #ff2727;
+}
+.product-modal .main-content .modal-options .add {
+  background-color: #3f3fe4;
+}
+
+@media (max-width: 767px) {
+  .product-modal {
+    width: 80%;
+  }
+  .product-modal .main-content {
+    justify-content: center;
+    gap: 10px;
+  }
+  .product-modal .main-content .product-info {
+    flex-direction: column;
+  }
+  .product-modal .main-content .product-info img {
+    width: 100px;
+    height: 100px;
+  }
+  .product-modal .main-content .modal-options {
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+  }
+}
+.product-modal-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(61, 61, 61, 0.7);
+  z-index: 9999;
+}
+
+.ReactModal__Content--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Content--before-close {
+  opacity: 0;
 }
