--- a/client/src/css/Profile/Profile.css
+++ b/client/src/css/Profile/Profile.css
@@ -82,8 +82,15 @@
   grid-template-columns: repeat(2, 50%);
   gap: 50px 20px;
 }
+@media (max-width: 767px) {
+  .profile .user-info .user-info-box {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
+}
 .profile .user-info .user-info-box .box {
+  box-shadow: 0px 0px 2px #c0c0c0;
   padding: 10px;
+  overflow: auto;
 }
 .profile .user-info .user-info-box .box h4 {
   margin-bottom: 20px;
@@ -112,7 +119,7 @@
   border: 1px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  width: 300px;
+  width: 400px;
   margin: 100px auto;
 }
 @media (max-width: 768px) {
