--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -77,9 +77,14 @@
 			display: grid;
 			margin-bottom: 20px;
 			grid-template-columns: repeat(2, 50%);
+			@media (max-width: 767px) {
+				grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+			}
 			gap: 50px 20px;
 			.box {
+				box-shadow: 0px 0px 2px #c0c0c0;
 				padding: 10px;
+				overflow: auto;
 				h4 {
 					margin-bottom: 20px;
 				}
@@ -108,7 +113,7 @@
 			border: 1px solid #c0c0c0;
 			border-radius: 10px;
 			padding: 10px;
-			width: 300px;
+			width: 400px;
 			margin: 100px auto;
 			@media (max-width: 768px) {
 				position: relative;
